Header icons and z-index fix for overlays

--- a/src/assets/less/style.less
+++ b/src/assets/less/style.less
@@ -106,11 +106,7 @@ body {
         padding: @spacing__s @spacing__ms;
         cursor: pointer;
         border-radius: 3px;
-        width: 33.3%;
-        
-        &:hover {
-          color: @white;
-        }
+        width: 44%;
         
         &.left {
           text-align: left;
@@ -120,10 +116,20 @@ body {
           padding: 0;
           display: flex;
           justify-content: center;
+          width: 12%;
+
+          img {
+            margin: 0;
+          }
         }
         
         &.right {
           text-align: right;
+        }
+
+        img {
+          margin-right: 8px;
+          vertical-align: text-top;
         }
       }
       
@@ -229,6 +235,7 @@ body {
       opacity: 0;
       pointer-events: none;
       transition: all .3s ease;
+      z-index: 10;
       
       .game-list {
         position: relative;
@@ -237,6 +244,7 @@ body {
         top: 0;
         left: -100%;
         width: 87%;
+        max-width: @app-width;
         padding: @spacing__l;
         background-color: @night-sky;
         transition: all .3s ease;
@@ -285,6 +293,7 @@ body {
       transition: all .3s ease;
       display: flex;
       justify-content: center;
+      z-index: 9;
       
       .how-to-play {
         position: absolute;
